Правки по замечаниям ревьюера по ФЗ 5-го спринта